--- a/docs/tutorial-usage/repository_qa.mdx
+++ b/docs/tutorial-usage/repository_qa.mdx
@@ -1,69 +1,82 @@
 ---
 sidebar_position: 3
-title: Stable Code Finetuning with Axolotl
+title: Repositories QA
 ---
 
 
 
 
+# Repositories QA
+
+In this tutorial, we will show you how you can create a simple program
+using Stable Code Instruct and Langchain to ask questions about a
+repository.
+
+> **Note**: This tutorial has been adapted from Langchain’s [official
+> tutorial](https://python.langchain.com/docs/use_cases/code_understanding).
+
+First, let’s go ahead and install our dependencies.
 
 ```python
-%pip install -qU tree_sitter tree_sitter_languages langchain-openai langchain langchain-community faiss-cpu
+%pip install -qU tree_sitter tree_sitter_languages sentence_transformers langchain langchain-community faiss-cpu GitPython
 ```
 
+Let’s first go ahead and clone a repository to work with. We’ll use the
+`langchain` repository as an example and GitPython to clone it.
 
 ```python
-import warnings
+from git import Repo
 
-warnings.filterwarnings("ignore")
-from pprint import pprint
-
+repo_path = "/content/langchain"
+repo = Repo.clone_from("https://github.com/langchain-ai/langchain", to_path=repo_path)
 ```
 
+Now that we have the repository, we need to get it into a form that we
+can easily ask questions about. To do this we need to create a vector
+database that will be used to match questions to the code in the
+repository.
 
-```python
-# Clone
-repo_path = "/Users/rlm/Desktop/test_repo"
-# repo = Repo.clone_from("https://github.com/langchain-ai/langchain", to_path=repo_path)
-```
-
+We will be using tree-sitter for parsing the code in our repository to
+chunks that we will retrieve when we ask questions.
 
 ```python
 from langchain_community.document_loaders.generic import GenericLoader
 from langchain_community.document_loaders.parsers import LanguageParser
+from langchain_text_splitters import Language, RecursiveCharacterTextSplitter
 
 loader = GenericLoader.from_filesystem(
-    "./example_data/source_code",
+    repo_path,
     glob="*",
     suffixes=[".py"],
     parser=LanguageParser(),
 )
 docs = loader.load()
-```
-
-
-```python
-from langchain_text_splitters import Language, RecursiveCharacterTextSplitter
 
 python_splitter = RecursiveCharacterTextSplitter.from_language(
-    language=Language.PYTHON, chunk_size=2000, chunk_overlap=200
+    language=Language.PYTHON, chunk_size=2000, chunk_overlap=200 # Tune these parameters to your liking
 )
 texts = python_splitter.split_documents(docs)
 len(texts)
 ```
 
+With the chunks of code in hand, we can now vectorize them and store
+them in a database. For vectorization, we will use the awesome MiniLM
+model from the sentence-tranformer library. And for the database, we
+will use Faiss.
 
 ```python
-from langchain_community.vectorstores import Chroma
-from langchain_openai import OpenAIEmbeddings
+from langchain_community.vectorstores import FAISS
+from langchain_community.embeddings import HuggingFaceEmbeddings
 
-db = Chroma.from_documents(texts, OpenAIEmbeddings(disallowed_special=()))
+db = FAISS.from_documents(texts, HuggingFaceEmbeddings())
 retriever = db.as_retriever(
     search_type="mmr",  # Also test "similarity"
     search_kwargs={"k": 8},
 )
 ```
 
+Finally, we will use Ollama to serve our model and answer questions
+about the repository.
 
 ```python
 from langchain.chains import ConversationalRetrievalChain
@@ -75,128 +88,8 @@ memory = ConversationSummaryMemory(
     llm=llm, memory_key="chat_history", return_messages=True
 )
 qa = ConversationalRetrievalChain.from_llm(llm, retriever=retriever, memory=memory)
-```
 
-
-```python
 question = "How can I initialize a ReAct agent?"
 result = qa(question)
 result["answer"]
-```
-
-
-```python
-import torch
-# Check so there is a gpu available, a T4(free tier) is enough to run this notebook
-assert (torch.cuda.is_available()==True)
-```
-
-
-```python
-!pip install torch=="2.1.2"
-!pip install -e git+https://github.com/OpenAccess-AI-Collective/axolotl#egg=axolotl
-!pip install flash-attn=="2.5.0"
-!pip install deepspeed=="0.13.1"
-```
-
-
-```python
-import yaml
-
-# Your YAML string
-yaml_string = """
-base_model: TinyLlama/TinyLlama-1.1B-intermediate-step-1431k-3T
-model_type: LlamaForCausalLM
-tokenizer_type: LlamaTokenizer
-is_llama_derived_model: true
-
-load_in_8bit: false
-load_in_4bit: true
-strict: false
-
-datasets:
-  - path: mhenrichsen/alpaca_2k_test
-    type: alpaca
-dataset_prepared_path:
-val_set_size: 0.05
-output_dir: ./qlora-out
-
-adapter: qlora
-lora_model_dir:
-
-sequence_len: 1096
-sample_packing: true
-pad_to_sequence_len: true
-
-lora_r: 32
-lora_alpha: 16
-lora_dropout: 0.05
-lora_target_modules:
-lora_target_linear: true
-lora_fan_in_fan_out:
-
-wandb_project:
-wandb_entity:
-wandb_watch:
-wandb_name:
-wandb_log_model:
-
-mlflow_experiment_name: colab-example
-
-gradient_accumulation_steps: 1
-micro_batch_size: 1
-num_epochs: 4
-max_steps: 20
-optimizer: paged_adamw_32bit
-lr_scheduler: cosine
-learning_rate: 0.0002
-
-train_on_inputs: false
-group_by_length: false
-bf16: false
-fp16: true
-tf32: false
-
-gradient_checkpointing: true
-early_stopping_patience:
-resume_from_checkpoint:
-local_rank:
-logging_steps: 1
-xformers_attention:
-flash_attention: false
-
-warmup_steps: 10
-evals_per_epoch:
-saves_per_epoch:
-debug:
-deepspeed:
-weight_decay: 0.0
-fsdp:
-fsdp_config:
-special_tokens:
-
-"""
-
-# Convert the YAML string to a Python dictionary
-yaml_dict = yaml.safe_load(yaml_string)
-
-# Specify your file path
-file_path = 'test_axolotl.yaml'
-
-# Write the YAML file
-with open(file_path, 'w') as file:
-    yaml.dump(yaml_dict, file)
-```
-
-
-```python
-# Buy using the ! the comand will be executed as a bash command
-!accelerate launch -m axolotl.cli.train /content/test_axolotl.yaml
-```
-
-
-```python
-# Buy using the ! the comand will be executed as a bash command
-!accelerate launch -m axolotl.cli.inference /content/test_axolotl.yaml \
-    --qlora_model_dir="./qlora-out" --gradio
 ```
