Add Axolotl tutorial for stable code finetuning

--- a/docs/tutorial-finetuning/stable_code_axolotl.ipynb
+++ b/docs/tutorial-finetuning/stable_code_axolotl.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "---\n",
     "sidebar_position: 1\n",
+    "title: Stable Code Finetuning with Axolotl\n",
     "---"
    ]
   },
@@ -13,7 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stable Code Finetuning with Axolotl\n"
+    "# Stable Code Finetuning with Axolotl\n",
+    "\n",
+    "Axolotl is a popular library for finetuning models. In this tutorial, we will use Axolotl to finetune our Stable Code 3B model on FORTRAN code to show you how to create a custom code completion model on a new programming language.\n",
+    "\n",
+    "This tutorial is based on the wonderful notebooks from Maxime Labonne's [llm course](https://github.com/mlabonne/llm-course/tree/main)\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Stability-AI/stable-code-docs/blob/main/docs/tutorial-finetuning/stable_code_axolotl.ipynb)"
    ]
   },
   {
@@ -25,6 +32,13 @@
     "import torch\n",
     "# Check so there is a gpu available, a T4(free tier) is enough to run this notebook\n",
     "assert (torch.cuda.is_available()==True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's get the environment set up first. We will go ahead and install the necessary packages."
    ]
   },
   {
@@ -40,6 +54,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Axolotl relies on a config file written in YAML to specify the model and the dataset and how to train the model. We will create a config file for our finetuning task to finetune the Stable Code 3B model on FORTRAN code using QLoRA. The dataset we are picking is from `codeparrot/github-code-clean` dataset which is a collection of code scraped from GitHub. Specifically, we will be utilizing the FORTRAN MIT licensed code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,18 +70,19 @@
     "\n",
     "# Your YAML string\n",
     "yaml_string = \"\"\"\n",
-    "base_model: TinyLlama/TinyLlama-1.1B-intermediate-step-1431k-3T\n",
-    "model_type: LlamaForCausalLM\n",
-    "tokenizer_type: LlamaTokenizer\n",
-    "is_llama_derived_model: true\n",
+    "base_model: stabilityai/stable-code-3b\n",
+    "model_type: AutoModelForCausalLM\n",
+    "tokenizer_type: AutoTokenizer\n",
     "\n",
     "load_in_8bit: false\n",
     "load_in_4bit: true\n",
     "strict: false\n",
     "\n",
     "datasets:\n",
-    "  - path: mhenrichsen/alpaca_2k_test\n",
-    "    type: alpaca\n",
+    "  - path: codeparrot/github-code-clean\n",
+    "    name: FORTRAN-mit\n",
+    "    type: completion\n",
+    "    field: code\n",
     "dataset_prepared_path:\n",
     "val_set_size: 0.05\n",
     "output_dir: ./qlora-out\n",
@@ -133,6 +155,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we can launch the run, which should take about XX if you are running this in a Colab environment with a T4 GPU:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -140,6 +169,13 @@
    "source": [
     "# Buy using the ! the comand will be executed as a bash command\n",
     "!accelerate launch -m axolotl.cli.train /content/test_axolotl.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the model has been finetuned, we can run it in a gradio environment:"
    ]
   },
   {
