Update tutorial links and fix code formatting

--- a/docs/tutorial-usage/repository_qa.ipynb
+++ b/docs/tutorial-usage/repository_qa.ipynb
@@ -16,6 +16,8 @@
    "source": [
     "# Repositories QA\n",
     "\n",
+    "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Stability-AI/stable-code-docs/blob/main/docs/tutorial-usage/repository_qa.ipynb)\n",
+    "\n",
     "In this tutorial, we will show you how you can create a simple program using Stable Code Instruct and Langchain to ask questions about a repository.\n",
     "\n",
     "> **Note**: This tutorial has been adapted from Langchain's [official tutorial](https://python.langchain.com/docs/use_cases/code_understanding).\n",
@@ -112,7 +114,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we will use Ollama to serve our model and answer questions about the repository."
+    "We will use Ollama to serve our model and answer questions about the repository. Therefore, we need to install it. You can install it by running the following if you are on linux or using colab:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -fsSL https://ollama.com/install.sh | sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we need to setup the ollama server to run in the background:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama serve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can chat with our repository.\n",
+    "\n",
+    "**Note:** The first time running this will take a while since you need to download the necessary model weights to run the model."
    ]
   },
   {
@@ -125,7 +161,7 @@
     "from langchain.memory import ConversationSummaryMemory\n",
     "from langchain_community.chat_models import ChatOllama\n",
     "\n",
-    "llm = ChatOllama(model=\"stable-code:zephyr\")\n",
+    "llm = ChatOllama(model=\"stable-code:instruct\")\n",
     "memory = ConversationSummaryMemory(\n",
     "    llm=llm, memory_key=\"chat_history\", return_messages=True\n",
     ")\n",
