--- a/docs/tutorial-finetuning/stable_code_axolotl.ipynb
+++ b/docs/tutorial-finetuning/stable_code_axolotl.ipynb
@@ -16,11 +16,11 @@
    "source": [
     "# Stable Code Finetuning with Axolotl\n",
     "\n",
+    "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Stability-AI/stable-code-docs/blob/main/docs/tutorial-finetuning/stable_code_axolotl.ipynb)\n",
+    "\n",
     "Axolotl is a popular library for finetuning models. In this tutorial, we will use Axolotl to finetune our Stable Code 3B model on FORTRAN code to show you how to create a custom code completion model on a new programming language.\n",
     "\n",
-    "This tutorial is based on the wonderful notebooks from Maxime Labonne's [llm course](https://github.com/mlabonne/llm-course/tree/main)\n",
-    "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Stability-AI/stable-code-docs/blob/main/docs/tutorial-finetuning/stable_code_axolotl.ipynb)"
+    "This tutorial is based on the wonderful notebooks from Maxime Labonne's [llm course](https://github.com/mlabonne/llm-course/tree/main)"
    ]
   },
   {
