Actualización de código para excluir archivos no UTF-8 y limitar el número de documentos procesados en el servidor Ollama.

--- a/docs/tutorial-usage/repository_qa.ipynb
+++ b/docs/tutorial-usage/repository_qa.ipynb
@@ -74,8 +74,9 @@
     "\n",
     "loader = GenericLoader.from_filesystem(\n",
     "    repo_path,\n",
-    "    glob=\"*\",\n",
+    "    glob=\"**/*\",\n",
     "    suffixes=[\".py\"],\n",
+    "    exclude=[\"**/non-utf8-encoding.py\"],\n",
     "    parser=LanguageParser(),\n",
     ")\n",
     "docs = loader.load()\n",
@@ -83,7 +84,8 @@
     "python_splitter = RecursiveCharacterTextSplitter.from_language(\n",
     "    language=Language.PYTHON, chunk_size=2000, chunk_overlap=200 # Tune these parameters to your liking\n",
     ")\n",
-    "texts = python_splitter.split_documents(docs)\n",
+    "n = 1_000\n",
+    "texts = python_splitter.split_documents(docs)[:n]\n",
     "len(texts)"
    ]
   },
@@ -123,7 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl -fsSL https://ollama.com/install.sh | sh"
+    "!curl -fsSL https://ollama.com/install.sh | sh\n",
+    "!command -v systemctl >/dev/null && sudo systemctl stop ollama"
    ]
   },
   {
@@ -139,7 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama serve"
+    "import subprocess\n",
+    "\n",
+    "# Start a subprocess in the background\n",
+    "process = subprocess.Popen([\"ollama\", \"serve\"], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)"
    ]
   },
   {
@@ -169,7 +175,7 @@
     "\n",
     "question = \"How can I initialize a ReAct agent?\"\n",
     "result = qa(question)\n",
-    "result[\"answer\"]"
+    "print(result[\"answer\"])"
    ]
   }
  ],
